[tool.poetry]
name = "last9"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Werkzeug = "^2.0.2"
Flask = "^2.0.2"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
